GUI & main: refactor for code quality and SLAP compliance
Main, MainWindow, and DialogBox have been refactored to improve code
quality and readability according to project standards:

* Apply SLAP (Single Level of Abstraction Principle)
* Remove magic variables and replace with constants
* Break down large methods into smaller, single-purpose methods
* Use guard clauses to simplify control flow
* Ensure no deep nesting and keep methods under 30 lines

These changes make the main application and GUI code cleaner, easier
to maintain, and more consistent with backend coding conventions.