@@ -18,65 +18,91 @@ public class BurgerBurglar {
     private static final String LINE_BREAK =
             "______________________________________________________________________\n";
 
+    /** Default file path for saving and loading tasks. */
+    private static final String DEFAULT_FILE_PATH = "data/burgerburglar.txt";
+
+    /** File path for the application logo. */
+    private static final String LOGO_FILE_PATH = "data/logo.txt";
+
+    /** Fallback message if logo cannot be loaded. */
+    private static final String LOGO_NOT_FOUND = "BURGERBURGLAR LOGO NOT FOUND!";
+
     private final Ui ui;
     private final TaskList tasks;
     private final Storage storage;
 
-
     /**
      * Constructs a new BurgerBurglar instance.
-     * Initializes the UI, loads tasks from the given file path, and sets up storage.
      *
      * @param filePath The path of the file to load/save tasks.
      */
     public BurgerBurglar(String filePath) {
         ui = new Ui();
         storage = new Storage(filePath);
-        TaskList loadedTasks;
-        try {
-            loadedTasks = storage.load();
-        } catch (BurgerException e) {
-            ui.showError("Could not load saved tasks. Starting with empty list.");
-            loadedTasks = new TaskList();
-        }
-        tasks = loadedTasks;
+        tasks = initializeTasks();
     }
 
     public BurgerBurglar() {
-        this("data/burgerburglar.txt");
+        this(DEFAULT_FILE_PATH);
+    }
+
+    /**
+     * Initializes the task list by attempting to load from storage.
+     */
+    private TaskList initializeTasks() {
+        try {
+            return storage.load();
+        } catch (BurgerException e) {
+            ui.showError("Could not load saved tasks. Starting with empty list.");
+            return new TaskList();
+        }
     }
 
     /**
      * Starts the main program loop.
-     * Displays the welcome message, then repeatedly reads user input
-     * and executes commands until an exit command is issued.
      */
     public void run() {
-        String logo = loadLogo();
-        ui.showWelcome(logo, VERSION); // prints welcome + manual
+        showWelcomeMessage();
 
         boolean isExit = false;
-
         while (!isExit) {
-            String input = ui.readCommand();
-            try {
-                Command command = Parser.parse(input);
-                command.execute(tasks, ui, storage);
-                isExit = command.isExit();
-            } catch (BurgerException e) {
-                ui.showError(e.getMessage());
-            }
+            isExit = processNextCommand();
         }
     }
 
     /**
-     * Loads the BURGERBURGLAR logo from data/logo.txt.
+     * Displays the welcome message with the logo and version.
+     */
+    private void showWelcomeMessage() {
+        String logo = loadLogo();
+        ui.showWelcome(logo, VERSION);
+    }
+
+    /**
+     * Reads and executes the next user command.
+     *
+     * @return true if the command signals exit, false otherwise
+     */
+    private boolean processNextCommand() {
+        String input = ui.readCommand();
+        try {
+            Command command = Parser.parse(input);
+            command.execute(tasks, ui, storage);
+            return command.isExit();
+        } catch (BurgerException e) {
+            ui.showError(e.getMessage());
+            return false;
+        }
+    }
+
+    /**
+     * Loads the BURGERBURGLAR logo from file.
      */
     private static String loadLogo() {
         try {
-            return new String(Files.readAllBytes(Paths.get("data/logo.txt")));
+            return Files.readString(Paths.get(LOGO_FILE_PATH));
         } catch (IOException e) {
-            return "BURGERBURGLAR LOGO NOT FOUND!";
+            return LOGO_NOT_FOUND;
         }
     }
 
@@ -86,9 +112,15 @@ public class BurgerBurglar {
      * @param args Command line arguments (unused)
      */
     public static void main(String[] args) {
-        new BurgerBurglar("data/burgerburglar.txt").run();
+        new BurgerBurglar().run();
     }
 
+    /**
+     * Provides a response for GUI integration.
+     *
+     * @param input user command
+     * @return program response as a string
+     */
     public String getResponse(String input) {
         try {
             Command command = Parser.parse(input);
